footer news scrollbar, fix

--- a/Seafarers/css/style.css
+++ b/Seafarers/css/style.css
@@ -386,6 +386,7 @@ a.link:hover::before {
 
 .news-box__footer {
   overflow: hidden;
+  overflow-x: auto;
   width: 100%;
   height: 150px;
   display: flex;
@@ -395,6 +396,8 @@ a.link:hover::before {
 
 .news-box__footer div {
   width: 280px;
+  min-width: 280px;
+  max-width: 280px;
   height: 100%;
   overflow: hidden;
   margin-right: 20px;
@@ -402,6 +405,10 @@ a.link:hover::before {
 
 .news-box__footer div:last-child {
   margin-right: 0;
+}
+
+.news-box__footer img {
+  width: 100%;
 }
 
 .switch-theme {
@@ -647,6 +654,31 @@ body.white .news-footer-menu a {
   font-size: 16px;
 }
 
+.news-menu ul::-webkit-scrollbar,
+.news-box__footer::-webkit-scrollbar {
+  width: 5px;
+}
+
+.news-menu ul::-webkit-scrollbar-track,
+.news-box__footer::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.news-menu ul::-webkit-scrollbar-thumb,
+.news-box__footer::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+.news-menu ul:hover::-webkit-scrollbar-thumb,
+.news-box__footer:hover::-webkit-scrollbar-thumb {
+  background: #3cc1ffab;
+}
+
+.news-menu ul::-webkit-scrollbar-thumb:hover,
+.news-box__footer::-webkit-scrollbar-thumb:hover {
+  background: #0694d4;
+}
+
 @keyframes ship {
   0% {
     background-position: 30px 50px;
@@ -752,7 +784,7 @@ body.white .news-footer-menu a {
 
 .news-menu h1 {
   background-color: #0694d4;
-  font-size: 15px;
+  font-size: 16px;
   padding: 5px;
   font-weight: 800;
   color: #231f20;
@@ -826,26 +858,6 @@ body.white .news-footer-menu a {
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   white-space: initial;
-}
-
-.news-menu ul::-webkit-scrollbar {
-  width: 5px;
-}
-
-.news-menu ul::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.news-menu ul::-webkit-scrollbar-thumb {
-  background: transparent;
-}
-
-.news-menu ul:hover::-webkit-scrollbar-thumb {
-  background: #3cc1ffab;
-}
-
-.news-menu ul::-webkit-scrollbar-thumb:hover {
-  background: #0694d4;
 }
 
 .news-footer-box {
