--- a/Seafarers/scss/_newsBoxFooter.scss
+++ b/Seafarers/scss/_newsBoxFooter.scss
@@ -1,5 +1,6 @@
 .news-box__footer {
   overflow: hidden;
+  overflow-x: auto;
   width: 100%;
   height: 150px;
   display: flex;
@@ -9,6 +10,8 @@
 
 .news-box__footer div {
   width: 280px;
+  min-width: 280px;
+  max-width: 280px;
   height: 100%;
   overflow: hidden;
   margin-right: 20px;
@@ -16,4 +19,8 @@
 
 .news-box__footer div:last-child {
   margin-right: 0;
+}
+
+.news-box__footer img {
+  width: 100%;
 }
