--- a/Seafarers/scss/_newsMenu.scss
+++ b/Seafarers/scss/_newsMenu.scss
@@ -7,7 +7,7 @@
 
 .news-menu h1 {
     background-color: $colorBgHeader;
-    font-size: 15px;
+    font-size: 16px;
     padding: 5px;
     font-weight: 800;
     color: $colorMain;
@@ -85,24 +85,4 @@
         -webkit-box-orient: vertical;
         white-space: initial;
     }
-}
-
-.news-menu ul::-webkit-scrollbar {
-    width: 5px;
-}
-
-.news-menu ul::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-.news-menu ul::-webkit-scrollbar-thumb {
-    background: transparent; 
-}
-
-.news-menu ul:hover::-webkit-scrollbar-thumb {
-    background: $colorBgNav;
-}
-
-.news-menu ul::-webkit-scrollbar-thumb:hover {
-    background: $colorBgHeader;
 }
